# APDoom3BFG

./: README.md  RELEASE-NOTES.md  zip-RBDOOM-3-BFG-full-release.bat  zip-RBDOOM-3-BFG-lite-snapshot.bat  zip-RBDOOM-3-BFG-release.sh
base/: zip-coredata.bat  zip-lightdata.bat
base/script/: doom_events_class_diagram.md
neo/: CMakeLists.txt  cmake-xcode-debug.sh  cmake-xcode-release.sh  cmake-xcode-universal.sh
neo/d3xp/anim/: Anim_Blend.cpp
neo/d3xp/menus/: MenuScreen_Shell_SystemOptions.cpp
neo/framework/: Common.cpp  DeclManager.cpp  DeclManager.h  FileSystem.h
neo/libs/ispc_texcomp/: CMakeLists.txt  kernel_ispc.h
neo/renderer/: BinaryImage.cpp  Image.h  ImageManager.cpp  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  ImmediateMode.cpp  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Model_gltf.cpp  Model_gltf.h  Model_local.h  RenderBackend.cpp  RenderSystem_init.cpp  RenderWorld_defs.cpp  RenderWorld_envprobes.cpp  RenderWorld_lightgrid.cpp  RenderWorld_local.h
neo/renderer/DXT/: DXTCodec.h  DXTEncoder.cpp
neo/renderer/NVRHI/: Image_NVRHI.cpp  RenderBackend_NVRHI.cpp
neo/sound/: snd_system.cpp  snd_world.cpp
neo/sound/OpenAL/: AL_CinematicAudio.cpp  AL_SoundHardware.cpp  AL_SoundSample.cpp
neo/sys/: DeviceManager_DX12.cpp  DeviceManager_VK.cpp
neo/sys/win32/: win_glimp.cpp  win_main.cpp
neo/tools/compilers/: CMakeLists.txt  main.cpp
